--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -11,16 +12,18 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
+    "install": "^0.13.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.1.1",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.1",
     "pug": "^3.0.1",
     "serve-favicon": "~2.4.5",
     "stripe": "^5.3.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "mocha": "^8.2.0"
+    "chai": "^3.2.0",
+    "chai-http": "^1.0.0",
+    "mocha": "^8.4.0"
   }
 }
